--- a/template/src/components/App/App.css
+++ b/template/src/components/App/App.css
@@ -2,30 +2,40 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
+.App__Logo {
   pointer-events: none;
+  width: 300px;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
+  .App__Logo {
     /* animation: App-logo-spin infinite 20s linear; */
   }
 }
 
-.App-header {
-  background-color: #8891a2;
+.App__Header {
+  background-color: #fff;
   min-height: 100vh;
+  width: 500px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin: 0 auto;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #616161;
 }
 
-.App-link {
-  color: #61dafb;
+.App__Desc {
+  margin-top: 2rem;
+  font-size: 1rem;
+  line-height: 1.5;
+}
+
+.App__Link {
+  color: #2d4691;
+  font-size: 1rem;
+  text-decoration: none;
 }
 
 @keyframes App-logo-spin {
