--- a/template/src/styles/index.css
+++ b/template/src/styles/index.css
@@ -14,8 +14,7 @@ body {
     "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  color: #fff;
-  background-color: #212121;
+  color: #212121;
 }
 
 body,
