[개선] React v17 버전 반영
업데이트 된 React v17 및 종속성 모듈, 템플릿 코드를 수정하였습니다.

--- a/template/public/index.html
+++ b/template/public/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="UTF-8" />
-    <title>cra-template-ko ← 이듬(E.UID) 블렌디드 러닝</title>
+    <title>프로젝트 제목을 입력합니다.</title>
     <!-- 웹 폰트(Spoqa Han Sans: ()) -->
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/spoqa-han-sans/2.1.2/css/SpoqaHanSans-kr.min.css" />
     <!--
@@ -13,22 +13,22 @@
       "/favicon.ico" 또는 "favicon.ico"과 달리, "%PUBLIC_URL%/favicon.ico"는
       클라이언트 사이드 라우팅(CSR)과 non-root public URL에서 문제없이 작동합니다.
     -->
-    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="icon" href="%PUBLIC_URL%/assets/favicon.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/assets/logo192.png" />
     <!-- 테마 컬러 -->
     <meta name="theme-color" content="#5382F6" />
     <!-- 검색 엔진 최적화(SEO) -->
-    <meta name="description" content="이듬(E.UID) 블렌디드 러닝" />
-    <meta name="keywords" content="웹, 웹 개발, 프론트엔드, 프론트엔드 개발, UI, 접근성, 블렌디드 러닝" />
+    <meta name="description" content="프로젝트에 대한 간략 명료한 소개 글을 작성합니다." />
+    <meta name="keywords" content="프로젝트, 핵심, 키워드, 검색, SEO, 입력" />
     <!-- 모바일 퍼스트(Mobile First) -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- 오픈 그래프 프로토콜(Open Graph Protocol: https://ogp.me/) -->
-    <meta property="og:title" content="이듬(E.UID) 블렌디드 러닝" />
-    <meta property="twitter:title" content="이듬(E.UID) 블렌디드 러닝" />
-    <meta property="og:type" content="article" />
-    <meta property="og:url" content="https://yamoo9.github.io/EUID" />
-    <meta property="og:description" content="Front-End 개발자를 꿈꾸는 이들을 위한 블렌디드 러닝으로 개발에 필요한 모든 것!" />
-    <meta property="og:image" content="//yamoo9.github.io/EUID/og-image.jpg" />
+    <meta property="og:title" content="프로젝트 이름을 작성합니다." />
+    <meta property="twitter:title" content="프로젝트 이름을 작성합니다." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://euid.dev" />
+    <meta property="og:description" content="프로젝트에 대한 간략 명료한 소개 글을 작성합니다." />
+    <meta property="og:image" content="./assets/og-image.jpg" />
     <meta property="og:article:author" content="야무(yamoo9)" />
     <!--
       manifest.json은 웹 앱을 사용자의 모바일 장치 또는 데스크톱에 설치할 때 사용되는 메타 데이터를 제공합니다.
@@ -46,14 +46,14 @@
       <h1>서비스를 정상적으로 이용할 수 없습니다.</h1>
       <p>
         사용 중인 오래된 웹 브라우저를 사용하면 서비스를 정상적으로 이용할 수 없습니다. 안전하고 빠른 서비스 이용을 위해
-        <a href="//www.webbup.kr/jsp/event/event2019.jsp" target="_blank" rel="noopener noreferrer">
+        <a href="https://browsehappy.com/?locale=ko_KR" target="_blank" rel="noopener noreferrer">
           구형 웹 브라우저를 최신 브라우저로 업그레이드 하세요<span style="font-style: italic">!</span>
         </a>
       </p>
     </div>
     <![endif]-->
 
-    <div id="reactApp"></div>
+    <div id="root"></div>
 
     <!--
       이 HTML 파일은 템플릿입니다.
